# hyperbolicMDS

./: MANIFEST.in  README.md  projectSetup.cfg  setup.cfg  setup.py  update_changes.sh
.github/workflows/: publish-to-pypi.yml
hyperbolicMDS/: _version.py  gyrovector.py  mds.py
