[metadata]
name = hyperbolicMDS
url = https://github.com/enlberman/hyperbolicMDS
author = Andrew J. Stier
author_email = andrewstier@uchicago.edu
maintainer = Andrew J. Stier
maintainer_email = andrewstier@uchicago.edu
description = hyperbolic mds in the poincare ball
long_description = hyperbolic mds in the poincare ball
;long_description_content_type = text/x-rst; charset=UTF-8
license = MIT
platforms = OS Independent
classifiers =
;    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
#python_requires = >=2.7
#install_requires =
#    numpy
#    scipy
#    pandas >=0.23
#tests_require =
#    pytest >=3.3
#    mock
#    pathlib ;
packages = find:
include_package_data = True

[options.extras_require]
;analysis =
#doc =
#    sphinx >=2.2
;    numpydoc
;    m2r
;    sphinx_rtd_theme
;docs =
;    %(doc)s
;test =
;    pytest >=3.3
;    mock
;    pathlib ;
;tests =
;    %(test)s
;travis_tests =
;    %(test)s
;    codecov
;    pytest-cov
;    pytest-xdist
;tutorial =
;    nbconvert
;    jupyter_client
;    ipykernel

[versioneer]
VCS = git
style = pep440
versionfile_source = hyperbolicMDS/_version.py
versionfile_build = hyperbolicMDS/_version.py
tag_prefix =
;parentdir_prefix =

[bdist_wheel]
universal=1
